force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/PS_ASU_SR_COL_PLAN__x.object-meta.xml
<CustomObject>
    <description>Data source script can be found here: https://docs.google.com/document/d/15tEhoHvIfkm50CKp5HaubNdQQkbt2IMoHofu7Zx9teM/edit</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>PS_ASU_SR_COL_PLANs</externalName>
    <label>Student Graduate Plan (external)</label>
    <pluralLabel>Student Graduate Plan (external)</pluralLabel>
</CustomObject>