force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ACAD_CAREER__c.field-meta.xml
<CustomField>
    <fullName>ACAD_CAREER__c</fullName>
    <description>Data sourced from PS_ACAD_PROG.ACAD_CAREER</description>
    <externalDeveloperName>ACAD_CAREER</externalDeveloperName>
    <label>Career</label>
    <length>4</length>
    <type>Text</type>
</CustomField>