force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ACAD_ORG__c.field-meta.xml
<CustomField>
    <fullName>ACAD_ORG__c</fullName>
    <description>Data sourced from PS_ACAD_PLAN_OWNER.ACAD_ORG</description>
    <externalDeveloperName>ACAD_ORG</externalDeveloperName>
    <label>Owner Organization</label>
    <length>25</length>
    <type>Text</type>
</CustomField>