force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ACAD_PLAN__c.field-meta.xml
<CustomField>
    <fullName>ACAD_PLAN__c</fullName>
    <description>Data sourced from PS_ACAD_PLAN (B).ACAD_PLAN</description>
    <externalDeveloperName>ACAD_PLAN</externalDeveloperName>
    <label>Academic Plan</label>
    <length>25</length>
    <referenceTargetField>Plan__c.Plan_Code__c</referenceTargetField>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Student Graduate Plan (external)</relationshipLabel>
    <relationshipName>Student_Graduate_Plan_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>