force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ACAD_PLAN_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ACAD_PLAN_TYPE__c</fullName>
    <description>Data sourced from PS_ACAD_PLAN_TBL.ACAD_PLAN_TPE</description>
    <externalDeveloperName>ACAD_PLAN_TYPE</externalDeveloperName>
    <label>Academic Plan Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>