force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ACAD_PROG__c.field-meta.xml
<CustomField>
    <fullName>ACAD_PROG__c</fullName>
    <description>Data sourced from PS_ACAD_PROG.ACAD_PROG</description>
    <externalDeveloperName>ACAD_PROG</externalDeveloperName>
    <label>Program</label>
    <length>4</length>
    <referenceTargetField>Program__c.Program_Code__c</referenceTargetField>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Student Graduate Plan (external)</relationshipLabel>
    <relationshipName>Student_Graduate_Plan_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>