force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ADMIT_TERM__c.field-meta.xml
<CustomField>
    <fullName>ADMIT_TERM__c</fullName>
    <description>Data sourced from PS_ACAD_PROG.ADMIT_TERM</description>
    <externalDeveloperName>ADMIT_TERM</externalDeveloperName>
    <label>Admitted Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Student Graduate Plan (external)</relationshipLabel>
    <relationshipName>Student_Graduate_Plan_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>