force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ADMIT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ADMIT_TYPE__c</fullName>
    <description>Data sourced from PS_ADM_APPL_DATA.ADMIT_TYPE</description>
    <externalDeveloperName>ADMIT_TYPE</externalDeveloperName>
    <label>Admitted Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>