force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/APPLIED_TERM__c.field-meta.xml
<CustomField>
    <fullName>APPLIED_TERM__c</fullName>
    <description>Data sourced from PS_STDNT_CAR_TERM.STRM</description>
    <externalDeveloperName>APPLIED_TERM</externalDeveloperName>
    <label>Applied Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Student Graduate Plan (external)</relationshipLabel>
    <relationshipName>Student_Graduate_Plan_external4</relationshipName>
    <type>IndirectLookup</type>
</CustomField>