force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_AA_DEFENSE_DT__c.field-meta.xml
<CustomField>
    <fullName>ASU_AA_DEFENSE_DT__c</fullName>
    <description>Data sourced from PS_ASU_AA_POS_DFNS.ASU_AA_DEFENSE_DT</description>
    <externalDeveloperName>ASU_AA_DEFENSE_DT</externalDeveloperName>
    <label>Defense Date</label>
    <type>Date</type>
</CustomField>