force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_AA_DEFENSE_TM__c.field-meta.xml
<CustomField>
    <fullName>ASU_AA_DEFENSE_TM__c</fullName>
    <description>Data sourced from PS_ASU_AA_POS_DFNS.ASU_AA_DEFENSE_TM</description>
    <externalDeveloperName>ASU_AA_DEFENSE_TM</externalDeveloperName>
    <label>Defense Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>