force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_AA_DFNS_LCTN__c.field-meta.xml
<CustomField>
    <fullName>ASU_AA_DFNS_LCTN__c</fullName>
    <description>Data sourced from PS_ASU_AA_POS_DFNS.ASU_AA_DFNS_LCTN</description>
    <externalDeveloperName>ASU_AA_DFNS_LCTN</externalDeveloperName>
    <label>Defense Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>