force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_AA_GRD_STRM__c.field-meta.xml
<CustomField>
    <fullName>ASU_AA_GRD_STRM__c</fullName>
    <description>Data sourced from PS_ASU_AA_POS.ASU_AA_GRD_STRM</description>
    <externalDeveloperName>ASU_AA_GRD_STRM</externalDeveloperName>
    <label>Graduating Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Student Graduate Plan (external)</relationshipLabel>
    <relationshipName>Student_Graduate_Plan_external6</relationshipName>
    <type>IndirectLookup</type>
</CustomField>