force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_AA_POS_GPA__c.field-meta.xml
<CustomField>
    <fullName>ASU_AA_POS_GPA__c</fullName>
    <description>Data sourced from PS_ASU_POS_BTCH (APB).ASU_AA_POS_GPA</description>
    <externalDeveloperName>ASU_AA_POS_GPA</externalDeveloperName>
    <label>Plan of Study GPA</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>