force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_ADV_TO_CANDCY__c.field-meta.xml
<CustomField>
    <fullName>ASU_ADV_TO_CANDCY__c</fullName>
    <description>Data sourced from PS_ASU_AA_POS.Dervied</description>
    <externalDeveloperName>ASU_ADV_TO_CANDCY</externalDeveloperName>
    <label>Advanced to Candidacy Link Available</label>
    <length>1</length>
    <type>Text</type>
</CustomField>