force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_CANDCY_LET_GEN__c.field-meta.xml
<CustomField>
    <fullName>ASU_CANDCY_LET_GEN__c</fullName>
    <description>Data sourced from PS_VAR_DATA_SPRG.Derived</description>
    <externalDeveloperName>ASU_CANDCY_LET_GEN</externalDeveloperName>
    <label>Candidacy Letter Generated</label>
    <length>1</length>
    <type>Text</type>
</CustomField>