force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_CAPSTONE_STAT__c.field-meta.xml
<CustomField>
    <fullName>ASU_CAPSTONE_STAT__c</fullName>
    <description>Data sourced from PS_ASU_AA_POS_PETN.MILESTONE_LEVEL</description>
    <externalDeveloperName>ASU_CAPSTONE_STAT</externalDeveloperName>
    <label>Capstone Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>