force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_CHECKOUTSTATUS__c.field-meta.xml
<CustomField>
    <fullName>ASU_CHECKOUTSTATUS__c</fullName>
    <description>Data sourced from PSXLATITEM.XLATSHORTNAME</description>
    <externalDeveloperName>ASU_CHECKOUTSTATUS</externalDeveloperName>
    <label>IPOS Degree Checkout Status Description</label>
    <length>10</length>
    <type>Text</type>
</CustomField>