force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_CMTEE_CHG_STAT__c.field-meta.xml
<CustomField>
    <fullName>ASU_CMTEE_CHG_STAT__c</fullName>
    <description>Data sourced from PS_MLSTN_LVL_TBL.DESCRFORMAL</description>
    <externalDeveloperName>ASU_CMTEE_CHG_STAT</externalDeveloperName>
    <label>IPOS Committee Change Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>