force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_COLLEGE_URL__c.field-meta.xml
<CustomField>
    <fullName>ASU_COLLEGE_URL__c</fullName>
    <description>Data sourced from PS_ASU_ACAD_ORG_CO.ASU_COLLEGE_URL</description>
    <externalDeveloperName>ASU_COLLEGE_URL</externalDeveloperName>
    <label>College Website</label>
    <type>Url</type>
</CustomField>