force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_DEFENSE_REQD__c.field-meta.xml
<CustomField>
    <fullName>ASU_DEFENSE_REQD__c</fullName>
    <description>Data sourced from PS_ASU_AA_POS_PETN.Derived</description>
    <externalDeveloperName>ASU_DEFENSE_REQD</externalDeveloperName>
    <label>Defense Required</label>
    <length>1</length>
    <type>Text</type>
</CustomField>