force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_FORMAT_STATUS__c.field-meta.xml
<CustomField>
    <fullName>ASU_FORMAT_STATUS__c</fullName>
    <description>Data sourced from PS_MLSTN_LVL_TBL.DESCRFORMAL</description>
    <externalDeveloperName>ASU_FORMAT_STATUS</externalDeveloperName>
    <label>Format Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>