force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_IPOS_CRSE_CHG__c.field-meta.xml
<CustomField>
    <fullName>ASU_IPOS_CRSE_CHG__c</fullName>
    <description>Data sourced from PS_ASU_AA_POS_CRS.Derived</description>
    <externalDeveloperName>ASU_IPOS_CRSE_CHG</externalDeveloperName>
    <label>IPOS Course Change Needed</label>
    <length>1</length>
    <type>Text</type>
</CustomField>