force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_IPOS_GRAD_DT__c.field-meta.xml
<CustomField>
    <fullName>ASU_IPOS_GRAD_DT__c</fullName>
    <description>Data sourced from PS_ASU_AA_POS (AAP).ASU_AA_TIME_LIMIT</description>
    <externalDeveloperName>ASU_IPOS_GRAD_DT</externalDeveloperName>
    <label>IPOS Graduation Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Student Graduate Plan (external)</relationshipLabel>
    <relationshipName>Student_Graduate_Plan_external3</relationshipName>
    <type>IndirectLookup</type>
</CustomField>