force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_IPOS_STAT_DESC__c.field-meta.xml
<CustomField>
    <fullName>ASU_IPOS_STAT_DESC__c</fullName>
    <description>Data sourced from PS_MLSTN_LVL_TBL.DESCRFORMAL</description>
    <externalDeveloperName>ASU_IPOS_STAT_DESC</externalDeveloperName>
    <label>IPOS Status Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>