force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_IPOS_STATUS__c.field-meta.xml
<CustomField>
    <fullName>ASU_IPOS_STATUS__c</fullName>
    <description>Data sourced from PS_ASU_AA_POS_PETN (AAPP).MILESTONE_LEVEL</description>
    <externalDeveloperName>ASU_IPOS_STATUS</externalDeveloperName>
    <label>IPOS Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>