force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_MANAGED_IGAP__c.field-meta.xml
<CustomField>
    <fullName>ASU_MANAGED_IGAP__c</fullName>
    <description>Data sourced from PS_ASU_DARS_DPROGS.Derived</description>
    <externalDeveloperName>ASU_MANAGED_IGAP</externalDeveloperName>
    <label>Managed IGAP</label>
    <length>1</length>
    <type>Text</type>
</CustomField>