force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_ORD_PLAN_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ASU_ORD_PLAN_TYPE__c</fullName>
    <description>Data sourced from PS_ACAD_PLAN_TBL.Derived</description>
    <externalDeveloperName>ASU_ORD_PLAN_TYPE</externalDeveloperName>
    <label>Numbered Plan Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>