force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_PARENT_ORG__c.field-meta.xml
<CustomField>
    <fullName>ASU_PARENT_ORG__c</fullName>
    <description>Data sourced from PSTREENODE.TREE_NODE or PS_ACAD_PLAN_OWNER.Acad_Org</description>
    <externalDeveloperName>ASU_PARENT_ORG</externalDeveloperName>
    <label>Parent Organization</label>
    <length>10</length>
    <type>Text</type>
</CustomField>