force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_PROG_DEPT_NAME__c.field-meta.xml
<CustomField>
    <fullName>ASU_PROG_DEPT_NAME__c</fullName>
    <description>Data sourced from PS_ACAD_ORG_TBL.DESCRFORMAL</description>
    <externalDeveloperName>ASU_PROG_DEPT_NAME</externalDeveloperName>
    <label>Department Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>