force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_SHOW_ADV_SCHED__c.field-meta.xml
<CustomField>
    <fullName>ASU_SHOW_ADV_SCHED__c</fullName>
    <description>Data sourced from PS_ASU_ORG_PAR_TBL.Derived</description>
    <externalDeveloperName>ASU_SHOW_ADV_SCHED</externalDeveloperName>
    <label>Graduate Advisor Schedule Link Available</label>
    <length>1</length>
    <type>Text</type>
</CustomField>