force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_SHOW_RQST_CHG__c.field-meta.xml
<CustomField>
    <fullName>ASU_SHOW_RQST_CHG__c</fullName>
    <description>Data sourced from PS_ACAD_PROG.Derived</description>
    <externalDeveloperName>ASU_SHOW_RQST_CHG</externalDeveloperName>
    <label>Graduate Request Change Available</label>
    <length>1</length>
    <type>Text</type>
</CustomField>