force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_SP_DEGR_FORMAL__c.field-meta.xml
<CustomField>
    <fullName>ASU_SP_DEGR_FORMAL__c</fullName>
    <description>Data sourced from PS_DEGREE_TBL.DESCRFORMAL</description>
    <externalDeveloperName>ASU_SP_DEGR_FORMAL</externalDeveloperName>
    <label>Degree Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>