force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_SP_DEGREE_NAME__c.field-meta.xml
<CustomField>
    <fullName>ASU_SP_DEGREE_NAME__c</fullName>
    <description>Data sourced from PS_DEGREE_TBL.DESCRSHORT</description>
    <externalDeveloperName>ASU_SP_DEGREE_NAME</externalDeveloperName>
    <label>Degree Abbreviation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>