force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_SP_IPOS_LNK__c.field-meta.xml
<CustomField>
    <fullName>ASU_SP_IPOS_LNK__c</fullName>
    <description>Data sourced from PS_TERM_TBL.Derived</description>
    <externalDeveloperName>ASU_SP_IPOS_LNK</externalDeveloperName>
    <label>IPOS Link Available</label>
    <length>1</length>
    <type>Text</type>
</CustomField>