force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_SP_MAJOR1__c.field-meta.xml
<CustomField>
    <fullName>ASU_SP_MAJOR1__c</fullName>
    <description>Data sourced from PS_ACAD_PLAN_TBL.TRNSCR_DESCR</description>
    <externalDeveloperName>ASU_SP_MAJOR1</externalDeveloperName>
    <label>Transcript Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>