force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_SP_MAJOR2__c.field-meta.xml
<CustomField>
    <fullName>ASU_SP_MAJOR2__c</fullName>
    <description>Data sourced from PS_ASU_ACADP_EXTNS (AAE).DESCR100</description>
    <externalDeveloperName>ASU_SP_MAJOR2</externalDeveloperName>
    <label>Major Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>