force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_SP_MAJOR3__c.field-meta.xml
<CustomField>
    <fullName>ASU_SP_MAJOR3__c</fullName>
    <description>Data sourced from PS_ACAD_PLAN_TBL.DESCR</description>
    <externalDeveloperName>ASU_SP_MAJOR3</externalDeveloperName>
    <label>Plan Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>