force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_SP_PRG_COLLEGE__c.field-meta.xml
<CustomField>
    <fullName>ASU_SP_PRG_COLLEGE__c</fullName>
    <description>Data sourced from PS_ACAD_ORG_TBL.DESCRFORMAL</description>
    <externalDeveloperName>ASU_SP_PRG_COLLEGE</externalDeveloperName>
    <label>Program Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>