force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ASU_TRACK_STATUS__c.field-meta.xml
<CustomField>
    <fullName>ASU_TRACK_STATUS__c</fullName>
    <description>Data sourced from PS_ASU_AI0008_V1.ASU_TRACK_STATUS</description>
    <externalDeveloperName>ASU_TRACK_STATUS</externalDeveloperName>
    <label>IPOS Track Status</label>
    <length>3</length>
    <type>Text</type>
</CustomField>