force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/BUILDING__c.field-meta.xml
<CustomField>
    <fullName>BUILDING__c</fullName>
    <description>Data sourced from PS_ASU_AA_POS_DFNS.BUILDING</description>
    <externalDeveloperName>BUILDING</externalDeveloperName>
    <label>Building</label>
    <length>10</length>
    <type>Text</type>
</CustomField>