force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/CAMPUS__c.field-meta.xml
<CustomField>
    <fullName>CAMPUS__c</fullName>
    <description>Data sourced from PS_ACAD_PROG.CAMPUS</description>
    <externalDeveloperName>CAMPUS</externalDeveloperName>
    <label>Campus</label>
    <length>30</length>
    <type>Text</type>
</CustomField>