force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/COMPLETION_TERM__c.field-meta.xml
<CustomField>
    <fullName>COMPLETION_TERM__c</fullName>
    <description>Data sourced from PS_ACAD_DEGR.COMPLETION_TERM</description>
    <externalDeveloperName>COMPLETION_TERM</externalDeveloperName>
    <label>Completion Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Student Graduate Plan (external)</relationshipLabel>
    <relationshipName>Student_Graduate_Plan_external2</relationshipName>
    <type>IndirectLookup</type>
</CustomField>