force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/CUM_GPA__c.field-meta.xml
<CustomField>
    <fullName>CUM_GPA__c</fullName>
    <description>Data sourced from PS_STDNT_CAR_TERM (SCT).CUM_GPA</description>
    <externalDeveloperName>CUM_GPA</externalDeveloperName>
    <label>Cumulative GPA</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>