force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/DEGR_CHKOUT_STAT__c.field-meta.xml
<CustomField>
    <fullName>DEGR_CHKOUT_STAT__c</fullName>
    <description>Data sourced from PS_ACAD_PROG.DEGR_CHKOUT_STAT</description>
    <externalDeveloperName>DEGR_CHKOUT_STAT</externalDeveloperName>
    <label>IPOS Degree Checkout Status Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>