force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/DEGR_CONFER_DT__c.field-meta.xml
<CustomField>
    <fullName>DEGR_CONFER_DT__c</fullName>
    <description>Data sourced from PS_ACAD_DEGR (AD).DEGR_CONFER_DT</description>
    <externalDeveloperName>DEGR_CONFER_DT</externalDeveloperName>
    <label>Degree Conferral Date</label>
    <type>Date</type>
</CustomField>