force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/DEGREE__c.field-meta.xml
<CustomField>
    <fullName>DEGREE__c</fullName>
    <description>Data sourced from PS_ACAD_PLAN_TBL (C).DEGREE</description>
    <externalDeveloperName>DEGREE</externalDeveloperName>
    <label>Degree</label>
    <length>8</length>
    <type>Text</type>
</CustomField>