force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/DIPLOMA_DESCR__c.field-meta.xml
<CustomField>
    <fullName>DIPLOMA_DESCR__c</fullName>
    <description>Data sourced from PS_ACAD_PLAN_TBL.DIPLOMA_DESCR</description>
    <externalDeveloperName>DIPLOMA_DESCR</externalDeveloperName>
    <label>College Diploma Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>