force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/EDUCATION_LVL__c.field-meta.xml
<CustomField>
    <fullName>EDUCATION_LVL__c</fullName>
    <description>Data sourced from PS_DEGREE_TBL.EDUCATION_LVL</description>
    <externalDeveloperName>EDUCATION_LVL</externalDeveloperName>
    <label>Education Level</label>
    <length>2</length>
    <type>Text</type>
</CustomField>