force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/EMAIL_ADDR__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_ADDR__c</fullName>
    <description>Data sourced from PS_ASU_ACADP_EXTNS.EMAIL_ADDR</description>
    <externalDeveloperName>EMAIL_ADDR</externalDeveloperName>
    <label>Plan Owner Email Address</label>
    <type>Email</type>
</CustomField>