force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/EXP_GRAD_TERM__c.field-meta.xml
<CustomField>
    <fullName>EXP_GRAD_TERM__c</fullName>
    <description>Data sourced from PS_ACAD_PROG.EXP_GRAD_TERM</description>
    <externalDeveloperName>EXP_GRAD_TERM</externalDeveloperName>
    <label>Expected Graduation Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Student Graduate Plan (external)</relationshipLabel>
    <relationshipName>Student_Graduate_Plan_external1</relationshipName>
    <type>IndirectLookup</type>
</CustomField>