force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/MILESTONE_LEVEL__c.field-meta.xml
<CustomField>
    <fullName>MILESTONE_LEVEL__c</fullName>
    <description>Data sourced from PS_ASU_AA_POS_DFNS (AAPD).MILESTONE_LEVEL</description>
    <externalDeveloperName>MILESTONE_LEVEL</externalDeveloperName>
    <label>Milestone Level</label>
    <length>3</length>
    <type>Text</type>
</CustomField>