force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/PERCENT_OWNED__c.field-meta.xml
<CustomField>
    <fullName>PERCENT_OWNED__c</fullName>
    <description>Data sourced from PS_ACAD_PLAN_OWNER.PERCENT_OWNED</description>
    <externalDeveloperName>PERCENT_OWNED</externalDeveloperName>
    <label>Ownership Percentage</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>