force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/PHONE__c.field-meta.xml
<CustomField>
    <fullName>PHONE__c</fullName>
    <description>Data sourced from PS_ASU_ACADP_EXTNS.PHONE</description>
    <externalDeveloperName>PHONE</externalDeveloperName>
    <label>Plan Owner Phone Number</label>
    <type>Phone</type>
</CustomField>