force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/PROG_STATUS__c.field-meta.xml
<CustomField>
    <fullName>PROG_STATUS__c</fullName>
    <description>Data sourced from PS_ACAD_PROG.PROG_STATUS</description>
    <externalDeveloperName>PROG_STATUS</externalDeveloperName>
    <label>Program Status</label>
    <length>2</length>
    <type>Text</type>
</CustomField>