force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/REQ_TERM__c.field-meta.xml
<CustomField>
    <fullName>REQ_TERM__c</fullName>
    <description>Data sourced from PS_ACAD_PROG.REQ_TERM</description>
    <externalDeveloperName>REQ_TERM</externalDeveloperName>
    <label>Program Requirement Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Student Graduate Plan (external)</relationshipLabel>
    <relationshipName>Student_Graduate_Plan_external5</relationshipName>
    <type>IndirectLookup</type>
</CustomField>