force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/ROOM__c.field-meta.xml
<CustomField>
    <fullName>ROOM__c</fullName>
    <description>Data sourced from PS_ASU_AA_POS_DFNS.ROOM</description>
    <externalDeveloperName>ROOM</externalDeveloperName>
    <label>Room</label>
    <length>10</length>
    <type>Text</type>
</CustomField>