force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/RPT_DATE__c.field-meta.xml
<CustomField>
    <fullName>RPT_DATE__c</fullName>
    <description>Data sourced from PS_ASU_POS_BTCH.RPT_DATE</description>
    <externalDeveloperName>RPT_DATE</externalDeveloperName>
    <label>IPOS Batch Report Date</label>
    <type>Date</type>
</CustomField>