force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/STDNT_CAR_NBR__c.field-meta.xml
<CustomField>
    <fullName>STDNT_CAR_NBR__c</fullName>
    <description>Data sourced from PS_ACAD_PROG.STDNT_CAR_NBR</description>
    <externalDeveloperName>STDNT_CAR_NBR</externalDeveloperName>
    <label>Student Career Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>