force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/TERM_BEGIN_DT__c.field-meta.xml
<CustomField>
    <fullName>TERM_BEGIN_DT__c</fullName>
    <description>Data sourced from PS_TERM_TBL.TERM_BEGIN_DT</description>
    <externalDeveloperName>TERM_BEGIN_DT</externalDeveloperName>
    <label>Term Begin Date</label>
    <type>Date</type>
</CustomField>