force-app/main/default/objects/PS_ASU_SR_COL_PLAN__x/fields/TERM_END_DT__c.field-meta.xml
<CustomField>
    <fullName>TERM_END_DT__c</fullName>
    <description>Data sourced from PS_TERM_TBL.TERM_END_DT</description>
    <externalDeveloperName>TERM_END_DT</externalDeveloperName>
    <label>Term End Date</label>
    <type>Date</type>
</CustomField>